updated header nav

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -58,24 +58,24 @@
                             <div class="usa-col">
                                 <ul class="usa-nav__submenu-list">
                                     <li class="usa-nav__submenu-item">
-                                        <a routerLink="/upcoming-events">Our Calendar</a>
+                                        <a routerLink="/upcoming-events">Upcoming Events</a>
+                                    </li>
+                                    <li class="usa-nav__submenu-item">
+                                        <a routerLink="/social-events">Social Events</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
                                         <a routerLink="/recent-events">Recent Events</a>
-                                    </li>
-                                    <li class="usa-nav__submenu-item">
-                                        <a routerLink="/about-us">About Us</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="usa-col">
                                 <ul class="usa-nav__submenu-list">
                                     <li class="usa-nav__submenu-item">
+                                        <a routerLink="/about-us">About Us</a>
+                                    </li>
+                                    <li class="usa-nav__submenu-item">
                                         <a href="../../../assets/pdf/FCL_Petition_-_20182.pdf" target="_blank">Our Petition</a>
                                     </li>
-                                    <!-- <li class="usa-nav__submenu-item">
-                                        <a routerLink="/social-outings">Social Outings</a>
-                                    </li> -->
                                 </ul>
                             </div>
                         </div>
@@ -147,6 +147,9 @@
                 </li>
                 <li class="usa-nav__primary-item">
                     <a routerLink="/upcoming-events" class="usa-nav__link">Upcoming Events</a>
+                </li>
+                <li class="usa-nav__primary-item">
+                    <a routerLink="/social-events" class="usa-nav__link">Social Events</a>
                 </li>
                 <li class="usa-nav__primary-item">
                     <a routerLink="/recent-events" class="usa-nav__link">Recent Events</a>
