--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -54,3 +54,11 @@ img {
     //     height: 70px;
     // }
 }
+
+.usa-header--extended .usa-nav__inner {
+    max-width: 75rem;
+}
+
+.usa-header--extended .usa-navbar {
+    max-width: 75rem;
+}
