updated GL link, fixed rsvp cutoffs

--- a/src/app/core/join/how-to-join/join.component.html
+++ b/src/app/core/join/how-to-join/join.component.html
@@ -50,7 +50,7 @@
             <p>
                 What happens next? Learn more about the next steps in becoming an Ohio Freemason.
             </p>
-            <a target="_blank" href="https://www.freemason.com/petition-process/" class="usa-button usa-button--accent-warm centered" rel="noopener noreferrer">
+            <a target="_blank" href="https://www.freemason.com/how-to-join/" class="usa-button usa-button--accent-warm centered" rel="noopener noreferrer">
                 <span class="text-white">LEARN MORE</span>
             </a>
         </div>
