--- a/src/app/forest-city/outings/forest-city-in-the-city/forest-city-in-the-city.component.scss
+++ b/src/app/forest-city/outings/forest-city-in-the-city/forest-city-in-the-city.component.scss
@@ -7,8 +7,14 @@
     }
     @media screen and (max-width: 1023px) {
         &-title,&-content {
-            padding-left: 50px;
-            padding-right: 50px;
+            padding-left: 5px;
+            padding-right: 5px;
         }
+    }
+}
+
+.event-image {
+    @media screen and (min-width: 1024px) {
+        width: 50%;
     }
 }
