added 2 forks to social events

--- a/src/app/forest-city/outings/forest-city-in-the-city/forest-city-in-the-city.component.html
+++ b/src/app/forest-city/outings/forest-city-in-the-city/forest-city-in-the-city.component.html
@@ -79,9 +79,9 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="card-footer text-muted">
+                                <!-- <div class="card-footer text-muted">
 
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
