--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -1,5 +1,5 @@
 .fcl-home-welcome {
-    background: url(../../../assets/images/officers_2022_2023.jpg) no-repeat center;
+    background: url(../../../assets/images/officers_2023_2024.JPG) no-repeat center;
     background-size: cover;
     height: 785px;
     position: relative;
