--- a/src/app/forest-city/recent-events/recent-events.component.html
+++ b/src/app/forest-city/recent-events/recent-events.component.html
@@ -30,7 +30,7 @@
             <div class="card-body text-center">
                 <h5 class="card-title">{{ event.eventName }}</h5>
                 <p class="card-text text-bold">{{ event.displayDate }}</p>
-                <p class="card-text">{{ event.description }}</p>
+                <p class="card-text" innerHtml="{{ event.description }}"></p>
             </div>
         </div>
     </div>
