Add uh past masters

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -38,7 +38,10 @@
                                         <a routerLink="/past-masters">Our Past Masters</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a routerLink="golden-square-past-masters">Past Masters of Golden Square Lodge No. 679</a>
+                                        <a routerLink="golden-square-past-masters">Past Masters of Golden Square No. 679</a>
+                                    </li>
+                                    <li class="usa-nav__submenu-item">
+                                        <a routerLink="university-heights-past-masters">Past Masters of University Heights No. 738</a>
                                     </li>
                                 </ul>
                             </div>
