added brotherhood night history, and meals for awards night

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -64,10 +64,10 @@
                                         <a routerLink="/upcoming-events">Upcoming Events</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a routerLink="/social-events">Social Events</a>
+                                        <a routerLink="/recent-events">Recent Events</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a routerLink="/recent-events">Recent Events</a>
+                                        <a routerLink="/brotherhood-night-history">Brotherhood Night: A History</a>
                                     </li>
                                 </ul>
                             </div>
