fix responsiveness on mobile

--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -8,9 +8,9 @@
           </p>
         </div>
     </div>
-    <div class="p-4 d-flex align-items-center justify-content-between">
+    <div class="p-4 d-flex align-items-center justify-content-between flex-wrap">
       <div class="d-flex align-items-center">
-        <img src="./assets/images/pancake.png" style="width:100px; height:100px; margin-right:20px" alt="Loading"/>
+        <img class="d-none d-md-block" src="./assets/images/pancake.png" style="width:100px; height:100px; margin-right:20px" alt="Pancakes"/>
         <div>
           <h2 class="text-color-blue">Join Us For A Forest City Pancake Breakfast</h2>
           <p class="usa-prose mb-0">
