--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -10,17 +10,17 @@
     </div>
     <div class="p-4 d-flex align-items-center justify-content-between flex-wrap">
       <div class="d-flex align-items-center">
-        <img class="d-none d-md-block" src="./assets/images/pancake.png" style="width:100px; height:100px; margin-right:20px" alt="Pancakes"/>
+        <img class="d-none d-md-block" src="./assets/images/fcl-bell-color.png" style="width:100px; height:100px; margin-right:20px" alt="Pancakes"/>
         <div>
-          <h2 class="text-color-blue">Join Us For A Forest City Pancake Breakfast</h2>
+          <h2 class="text-color-blue">Join Us For A Forest City Table Lodge of Instruction</h2>
           <p class="usa-prose mb-0">
-            Saturday, May 3rd | 8-11 AM at the Lyndhurst Masonic Temple
+            Wednesday, June 18th | 6:30 PM at the Lyndhurst Masonic Temple
             <br />
-            All proceeds benefit the Greenview Upper Elementary PTA
+            
           </p>
         </div>
       </div>
-      <a target="_blank" href="./assets/images/pancakes.png" class="usa-button usa-button--primary">Learn more</a>
+      <a target="_blank" href="./upcoming-events" class="usa-button usa-button--primary">RSVP</a>
     </div>
     <div id="main-content">
       <router-outlet></router-outlet>
