made rsvp close time dynamic

--- a/src/app/forest-city/future-events/future-events.component.html
+++ b/src/app/forest-city/future-events/future-events.component.html
@@ -45,7 +45,7 @@
                                         RSVP
                                     </button>
                                     <div class="text-base d-flex flex-wrap">
-                                        <p>Closes {{ rsvpExpDate }} at 11:59PM</p>
+                                        <p>Closes {{ rsvpExpDate }} at {{ rsvpExpTime }}</p>
                                     </div>
                                 </div>
                             </div>
