added contact sunshine committee

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -79,6 +79,9 @@
                                     <li class="usa-nav__submenu-item">
                                         <a href="../../../assets/pdf/GLO_Petition_for_Degrees.pdf" target="_blank">Our Petition</a>
                                     </li>
+                                    <li class="usa-nav__submenu-item">
+                                        <a routerLink="/contact-sunshine-committee">Contact Sunshine Committee</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
