--- a/src/app/forest-city/future-events/future-events.component.html
+++ b/src/app/forest-city/future-events/future-events.component.html
@@ -5,6 +5,7 @@
     </div>
     <div class="future-events-content bg-gray-10 py-3">
         <h4 class="mb-3">Upcoming Events</h4>
+        <h6 class="mb-3"><b>NOTICE:</b> Please add <i>forestcitylodgecontacts@gmail.com</i> to your email contacts to prevent confirmation emails from going to your spam folder.</h6>
         <div class="row">
             <div class="col-md-12 col-lg-8 mb-2">
                 <div *ngFor="let event of events, let i = index" class="border-rounded mb-2">
