--- a/src/app/forest-city/future-events/future-events.component.html
+++ b/src/app/forest-city/future-events/future-events.component.html
@@ -50,7 +50,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div *ngIf="getRsvpLimitReached()">
+                            <div *ngIf="getRsvpLimitReached(event)">
                                 <p>{{ rsvpLimitMsg }}</p>
                             </div>
                         </div>
