added mitzvah committee page

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -64,6 +64,9 @@
                                         <a routerLink="/upcoming-events">Upcoming Events</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
+                                        <a routerLink="/mitzvah-events">Mitzvah Committee Events</a>
+                                    </li>
+                                    <li class="usa-nav__submenu-item">
                                         <a routerLink="/recent-events">Recent Events</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
@@ -155,7 +158,7 @@
                     <a routerLink="/upcoming-events" class="usa-nav__link">Upcoming Events</a>
                 </li>
                 <li class="usa-nav__primary-item">
-                    <a routerLink="/social-events" class="usa-nav__link">Social Events</a>
+                    <a routerLink="/mitzvah-events" class="usa-nav__link">Mitzvah Cmte. Events</a>
                 </li>
                 <li class="usa-nav__primary-item">
                     <a routerLink="/recent-events" class="usa-nav__link">Recent Events</a>
